--- a/src/pages/admin/[...slug].astro
+++ b/src/pages/admin/[...slug].astro
@@ -1,14 +1,7 @@
 ---
-// src/pages/admin/[...slug].astro
-export const prerender = true;
+export const prerender = false;
 
 import StudioWrapper from '../../components/Studio';
-
-export function getStaticPaths() {
-  return [
-    { params: { slug: undefined } } 
-  ];
-}
 ---
 <!DOCTYPE html>
 <html lang="es">
