--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,10 @@ let categories: Category[] = [];
 try {
     // Consulta GROQ ACTUALIZADA: 
     // Filtramos por 'isMain == true' y limitamos a 3 resultados
-    const query = `*[_type == "category" && isMain == true][0...3]{
-        "id": slug.current,
-        name,
-        coverImage
+    const query = `*[_type == "category" && isMain == true] | order(_updatedAt desc) [0...3] {
+    "id": slug.current,
+    name,
+    coverImage
     }`;
     categories = await sanityClient.fetch(query);
 
