--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+
+export const prerender = false;
+
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
@@ -14,20 +17,17 @@ interface Category {
 }
 
 let categories: Category[] = [];
-
 try {
-    // Consulta GROQ ACTUALIZADA: 
-    // Filtramos por 'isMain == true' y limitamos a 3 resultados
-    const query = `*[_type == "category" && isMain == true] | order(_updatedAt desc) [0...3] {
-    "id": slug.current,
-    name,
-    coverImage
+    const query = `*[_type == "category" && isMain == true] | order(_updatedAt desc)[0...3]{
+        "id": slug.current,
+        name,
+        coverImage
     }`;
     categories = await sanityClient.fetch(query);
-
 } catch (e) {
     console.error("Error conectando con Sanity en Index:", e);
 }
+---
 ---
 
 <Layout title="Eva Torres | Moda y Calzados en Arahal">
